--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,56 +1,60 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size:12px;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 12px;
+}
 
 .search-bar {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 }
 
 .search-form {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-    padding-top: 36px;
-    padding-bottom: 36px;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  padding-top: 36px;
+  padding-bottom: 36px;
 }
 
-.search-input{
-    width:272px;
-    height: 40px;
-    border-radius: 8px;
-    padding-left:10px;
+.search-input {
+  width: 272px;
+  height: 40px;
+  border-radius: 8px;
+  padding-left: 10px;
 }
 
 .search-button {
-    background-color: #4E75FF;
-    width: 91px;
-    height: 40px;
-    border-radius: 8px;
-    color:white;
+  background-color: #4e75ff;
+  width: 91px;
+  height: 40px;
+  border-radius: 8px;
+  color: white;
 }
 
 .image-content {
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    max-width: 1330px;
-    margin: auto;
-    padding-left:20px;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  max-width: 1330px;
+  margin: auto;
+  padding: 20px;
 }
-.content-list-item {
-    border-width: 2px;
+.container-div {
+  border: solid 1px;
 }
 
 .content-bottom {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width:240px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 240px;
+}
+
+.stats {
+  display: flex;
+  justify-content: center;
 }
